--- a/concepts/core-architecture/test-lifecycle.mdx
+++ b/concepts/core-architecture/test-lifecycle.mdx
@@ -1,245 +1,272 @@
 ---
-title: "Test Lifecycle and Environment Setup"
-description: "Delve into the stages of the GoogleTest execution lifecycle—from environment setup to teardown. Learn about test fixtures, global test environments, and how resource management is handled to optimize repeatability and isolation in test runs."
+title: "Test Discovery and Execution Lifecycle"
+description: "Follow the journey of a test from definition to execution. Learn about test registration, automatic test discovery, structuring of test suites and test cases, and the lifecycle events (SetUp, TearDown) that surround each test run."
 ---
 
-# Test Lifecycle and Environment Setup
+# Test Discovery and Execution Lifecycle
 
-Understanding the lifecycle of tests and environment setup in GoogleTest is crucial to writing reliable and maintainable tests. This guide explores the various stages in the execution of your tests, how GoogleTest manages test fixtures and global test environments, and the best practices for resource management to ensure test isolation and repeatability.
-
----
-
-## Table of Contents
-
-- [Overview of Test Lifecycle](#overview-of-test-lifecycle)
-- [Test Fixtures](#test-fixtures)
-- [Global Test Environments](#global-test-environments)
-- [Test Setup and Teardown](#test-setup-and-teardown)
-- [Resource Management Strategies](#resource-management-strategies)
-- [Best Practices for Isolation and Repeatability](#best-practices-for-isolation-and-repeatability)
-- [Troubleshooting Common Issues](#troubleshooting-common-issues)
+GoogleTest offers a streamlined yet powerful lifecycle for defining, discovering, and executing tests in C++. This page guides you through the journey of a test—from its initial registration, automatic discovery by the framework, organization within test suites and fixtures, to the lifecycle events that prepare the environment before execution and cleanup afterward.
 
 ---
 
-## Overview of Test Lifecycle
+## 1. Test Registration and Automatic Discovery
 
-GoogleTest runs tests following a well-defined lifecycle that ensures each test is executed in an isolated environment and cleans up properly after running:
+At the core of GoogleTest's seamless user experience is automatic test registration. Whenever you define a test using macros like `TEST`, `TEST_F`, or other test-defining macros, GoogleTest immediately registers it with the global test registry. This enables the framework to discover all tests without the need for manual enumeration.
 
-1. **Test Environment Setup:** Before any tests run, global test environments are created and their `SetUp()` methods are called. This allows preparing resources shared by all tests.
+### Key Concepts
 
-2. **Test Fixture Construction:** For each individual test, a fresh test fixture object is created. This provides a clean slate for tests, avoiding side effects across tests.
+- **Static Registration:** Each `TEST` or `TEST_F` macro invocation defines a test function and registers metadata about the test fixture, test name, location, and the object factory responsible for creating the test instance.
 
-3. **Test Setup:** The test fixture's `SetUp()` method is invoked to initialize test-specific resources or state.
+- **Unique Identification:** Tests are uniquely identified by their *test suite* and *test name*. The combination serves as the test's full name.
 
-4. **Test Execution:** The test body itself runs.
+- **Role of Test Fixture Classes:** For `TEST_F`, the test suite name matches the fixture class name. GoogleTest enforces a rule that all tests in the same test suite must use the same fixture class.
 
-5. **Test Teardown:** The test fixture's `TearDown()` method is called to clean up test-specific resources.
+### User Perspective
 
-6. **Fixture Destruction:** The test fixture object is destroyed.
-
-7. **Test Environment Teardown:** After all tests have finished, the global test environments have their `TearDown()` methods called to clean up shared resources.
-
-This lifecycle provides a robust framework to build tests that are independent and safe from resource leakage.
-
----
-
-## Test Fixtures
-
-Test fixtures are classes deriving from `testing::Test` that provide the context for tests. They allow you to:
-
-- Reuse setup and teardown code across multiple tests.
-- Encapsulate test-specific member variables and helper functions.
-
-**Key Characteristics:**
-
-- **Fresh instance per test:** GoogleTest creates a new fixture object for every test case, guaranteeing no state leaks occur between tests.
-- **SetUp and TearDown methods:** Override these to initialize and clean up resources needed by each test.
-
-### Example Test Fixture
+You simply write:
 
 ```cpp
-#include <gtest/gtest.h>
+TEST(MyTestSuite, DoesSomething) {
+  EXPECT_TRUE(DoSomething());
+}
 
-class DatabaseTest : public ::testing::Test {
+class MyFixture : public testing::Test {
  protected:
-  void SetUp() override {
-    // Initialize database connection
-  }
-
-  void TearDown() override {
-    // Clean up database connection
-  }
-
-  // Test-specific helper
-  bool IsConnected() const { return connected_; }
-
-  bool connected_ = false;
+  void SetUp() override { /* prepare fixture */ }
 };
 
-TEST_F(DatabaseTest, QueryReturnsExpectedResult) {
-  ASSERT_TRUE(IsConnected());
-  // Test query logic here
+TEST_F(MyFixture, WorksWithFixture) {
+  EXPECT_EQ(42, Answer());
 }
 ```
 
-### When to Use Constructors vs SetUp
-
-- **Constructor and Destructor:** Use to initialize and clean up non-failing setup. You can make fixture members `const` if initialized in the constructor.
-- **SetUp and TearDown:** Use for setup or teardown that can fail (e.g., that may throw or cause test failure). GoogleTest expects that fatal failures happen in these so that failures are reported properly.
+Behind the scenes, these are automatically known and ready to run when `RUN_ALL_TESTS()` is called.
 
 ---
 
-## Global Test Environments
+## 2. Structuring Tests into Test Suites and Fixtures
 
-Sometimes you need to manage resources that are shared by the entire test suite, such as database servers, logging frameworks, or external processes. For this, GoogleTest provides the concept of global test environments represented by classes derived from `testing::Environment`.
+GoogleTest groups related tests into **test suites**, which serve as logical containers. A test suite name can be arbitrary but typically maps to the feature or class being tested. Test suites can optionally share a **test fixture**: a class that lets you define common setup/teardown and shared objects.
 
-### Lifecycle of a Global Environment
+### Test Suites
 
-- **Registration:** Call `AddGlobalTestEnvironment()` at program initialization to register environment objects.
-- **Setup:** GoogleTest calls `Environment::SetUp()` once before any tests run.
-- **Teardown:** GoogleTest calls `Environment::TearDown()` once after all tests have finished.
+- Correspond with test collection named in the `TEST` or `TEST_F` macros.
+- GoogleTest maintains metadata for each test suite including the list of constituent tests.
+- Each test suite tracks aggregated results like the number of passed, failed, or skipped tests.
 
-### Defining a Global Environment
+### Test Fixtures
 
-```cpp
-#include <gtest/gtest.h>
+- Fixture classes derive from `testing::Test` and may override `SetUp()` and `TearDown()` for per-test initialization and cleanup.
+- Fixtures may also define **per-test-suite shared setup and teardown** methods:
+  - `static void SetUpTestSuite()` that runs once before any test in the suite.
+  - `static void TearDownTestSuite()` that runs once after all tests in the suite.
 
-class MyGlobalEnvironment : public ::testing::Environment {
- public:
-  void SetUp() override {
-    // Initialize global resources
-  }
+This design allows:
 
-  void TearDown() override {
-    // Clean up global resources
-  }
-};
-
-int main(int argc, char** argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  ::testing::AddGlobalTestEnvironment(new MyGlobalEnvironment);
-  return RUN_ALL_TESTS();
-}
-```
-
-### Best Practices
-
-- Use global environments for expensive setup/teardown operations.
-- Minimize shared mutable state in global environments to avoid flaky tests.
-
----
-
-## Test Setup and Teardown
-
-For test-specific initialization and cleanup, override the `SetUp()` and `TearDown()` methods in your test fixture:
-
-- `SetUp()` is called **immediately before** the test starts running.
-- `TearDown()` is called **immediately after** the test is finished.
+- Avoiding expensive setup on each test.
+- Sharing read-only or resettable resources across tests.
 
 ### Example
 
 ```cpp
-class FileSystemTest : public ::testing::Test {
+class DatabaseTest : public testing::Test {
  protected:
-  void SetUp() override {
-    // Prepare file system
-  }
-
-  void TearDown() override {
-    // Clean up file system
-  }
-};
-
-TEST_F(FileSystemTest, CanReadFile) {
-  // Test reading a file
-}
-```
-
-Both `SetUp()` and `TearDown()` must complete even if they encounter a failure so the test runner can correctly report test status.
-
-### Common Pitfalls
-
-- Don't perform expensive global setup here; use global environments.
-- Avoid changing state that other tests depend upon.
-
----
-
-## Resource Management Strategies
-
-GoogleTest encourages you to keep each test independent by avoiding shared mutable state and cleaning resources properly.
-
-- Leverage RAII principles in fixture members.
-- Use `SetUpTestSuite()` and `TearDownTestSuite()` static methods for setup/cleanup that applies to all tests in a fixture.
-- Use smart pointers or scoped resource wrappers to ensure automatic cleanup.
-
-### Static Setup and Teardown for Test Suites
-
-```cpp
-class NetworkTest : public ::testing::Test {
- public:
   static void SetUpTestSuite() {
-    // Runs once before all tests in this test suite
+    // Initialize shared DB connection
   }
 
   static void TearDownTestSuite() {
-    // Runs once after all tests in this test suite
+    // Close DB connection
   }
 
   void SetUp() override {
-    // Runs before each test
+    // Start transaction
   }
 
   void TearDown() override {
-    // Runs after each test
+    // Rollback transaction
   }
 };
+
+TEST_F(DatabaseTest, InsertRecord) {
+  EXPECT_TRUE(db.Insert(...));
+}
+
+TEST_F(DatabaseTest, DeleteRecord) {
+  EXPECT_TRUE(db.Delete(...));
+}
 ```
 
-`SetUpTestSuite()` and `TearDownTestSuite()` are ideal for expensive setup operations needed for multiple tests.
+This setup ensures a consistent environment while minimizing costly operations.
 
 ---
 
-## Best Practices for Isolation and Repeatability
+## 3. Test Lifecycle: From SetUp to TearDown
 
-To maximize the effectiveness of your tests:
+Every individual test goes through a well-defined lifecycle that guarantees isolation and proper resource management.
 
-- **Avoid sharing writable global state**: Each test should be able to run independently of others.
-- **Keep fixtures lightweight**: Avoid expensive setup on every test, balance with `SetUpTestSuite` and global environments.
-- **Ensure proper cleanup**: Use teardown methods and RAII patterns to release resources.
-- **Minimize dependencies on external resources**: Mock external dependencies or use test doubles where possible.
+### Lifecycle Methods
 
----
+1. **Fixture Object Creation**: For each test, a fresh test fixture object is created.
+2. **SetUpTestSuite** (static): Called once per test suite before any test runs.
+3. **SetUp**: Called before each test method to prepare the test fixture.
+4. **Test Body Execution**: The actual test code runs here.
+5. **TearDown**: Immediately after the test body, for cleanup.
+6. **Fixture Object Destruction**: The test fixture instance is destroyed.
+7. **TearDownTestSuite** (static): Called once after all tests in the suite complete.
 
-## Troubleshooting Common Issues
+### Important Notes
 
-### Test Not Invoking SetUp()/TearDown()
-- Verify your test fixture properly inherits from `testing::Test`.
-- Ensure your overrides are correctly spelled `SetUp()` and `TearDown()`.
+- The fixture object is **NOT** reused across multiple tests to ensure test independence.
+- If an assertion fails fatally (`ASSERT_*` macros), the current test function aborts but following tests in the suite continue.
+- Setup and teardown failures (e.g., in `SetUpTestSuite` or `SetUp`) can cause tests to be skipped.
 
-### Tests Interfering With Each Other
-- Check for shared static or global variables.
-- Use `ScopedTrace` to help identify test interactions.
+### Example Scenario
 
-### Memory Leaks or Resource Exhaustion
-- Use smart pointers in fixtures.
-- Verify `TearDown()` always releases resources.
+For `TEST_F(MyFixture, SomeTest)`, the sequence is:
 
-### Global Environment Not Running
-- Confirm `AddGlobalTestEnvironment()` is called before `RUN_ALL_TESTS()`.
-
----
-
-## Related Documentation
-
-- [GoogleTest Primer](../getting-started/primer-basics.md): Get started with writing tests and fixtures.
-- [Test Discovery and Execution Model](../core-architecture/test-discovery-execution-model.md): Understand how tests are discovered and run.
-- [Writing and Using Assertions](../../guides/core-testing-workflows/writing-assertions.md): Improve test assertions.
-- [Mocking Primer and Reference](../getting-started/mocking-primer.md), (../reference/mocking.md): Learn about mocking and expectations.
+```none
+Create MyFixture instance
+Call SetUpTestSuite() if first test
+Call SetUp()
+Run SomeTest's test body
+Call TearDown()
+Destroy MyFixture instance
+Call TearDownTestSuite() if last test
+```
 
 ---
 
-## Summary
+## 4. Execution Flow and Event Notifications
 
-Mastering the test lifecycle and environment management in GoogleTest is key to building robust, maintainable C++ test suites. From global environment setup to per-test fixtures and teardown, understanding and properly utilizing these stages ensure repeatability and isolation of tests, leading to reliable outcomes.
+GoogleTest emits event notifications throughout test execution via an extensible event listener API to facilitate custom logging, reporting, or integration.
 
+### Event Listener Callbacks
 
+- **OnTestProgramStart**: Before any tests run.
+- **OnTestIterationStart**: Before each iteration if test repetition is enabled.
+- **OnEnvironmentsSetUpStart / End**: Before and after global environments setup.
+- **OnTestSuiteStart / End**: Surrounds an entire test suite execution.
+- **OnTestStart / End**: Wraps execution of each individual test.
+- **OnTestPartResult**: Called after each assertion or explicit success/failure.
+- **OnEnvironmentsTearDownStart / End**: Before and after global environments teardown per iteration.
+- **OnTestIterationEnd**: After each iteration finishes.
+- **OnTestProgramEnd**: After all tests and environments complete.
+
+This event model enables fine-grained control over test monitoring and modifications.
+
+---
+
+## 5. Test Filtering and Execution Control
+
+GoogleTest supports running a selective subset of tests using filtering based on test names, test suite names, or patterns.
+
+### Filter Syntax
+
+- Use the flag `--gtest_filter=PositivePatterns[-NegativePatterns]`.
+- Patterns are colon-separated glob-wildcards, e.g., `FooTest.*:BarTest.Baz*`.
+- Negative patterns exclude matching tests.
+- Filtering applies consistently across all registered tests.
+
+### Examples
+
+```shell
+./my_tests --gtest_filter=NetworkTest.*
+./my_tests --gtest_filter=*Error* -LoggingTest.*
+./my_tests --gtest_filter=*
+```
+
+### Fail Fast
+
+- Set `--gtest_fail_fast` to stop test execution upon the first failure.
+
+### Test Sharding
+
+- Environment variables `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX` enable distributed execution across multiple machines or processes.
+
+---
+
+## 6. Summary and Practical Tips
+
+- Always use well-named test suites and fixtures to organize your tests and simplify management.
+- Avoid sharing state between tests except via proper fixture static setup/teardown.
+- Use `SetUpTestSuite` and `TearDownTestSuite` to optimize expensive shared resource management.
+- `RUN_ALL_TESTS()` will automatically discover and execute all registered tests.
+- Use filtering and sharding features to speed up large test runs or focus debugging.
+
+---
+
+## 7. Diagram: Test Discovery and Execution Lifecycle
+
+```mermaid
+flowchart TD
+  %% Test Registration and Discovery
+  TEST_DEF[Test Definition (TEST, TEST_F, etc.)] --> REG[Static Registration at Startup]
+  REG --> REGISTRY[(Global Test Registry)]
+
+  %% Test Execution Start
+  main_func["main() calls RUN_ALL_TESTS()"] --> INIT_INIT["Initialize GoogleTest flags"]
+  INIT_INIT --> RUN_ALL["RUN_ALL_TESTS()"
+   "Iterate over registered test suites and tests"]
+
+  %% Per Test Suite Execution
+  RUN_ALL -->|for each TestSuite| SUITE_START["OnTestSuiteStart"]
+  SUITE_START --> SUITE_SETUP["Call SetUpTestSuite()"]
+
+  %% Per Test Execution
+  SUITE_SETUP -->|for each Test| TEST_START["OnTestStart"]
+  TEST_START --> F_CREATE["Create Fixture Object"]
+  F_CREATE --> F_SETUP["Call SetUp()"]
+  F_SETUP --> T_BODY["Run TestBody()"]
+  T_BODY --> F_TEARDOWN["Call TearDown()"]
+  F_TEARDOWN --> F_DESTROY["Destroy Fixture Object"]
+  F_DESTROY --> TEST_END["OnTestEnd"]
+  TEST_END --> SUITE_END["OnTestSuiteEnd"]
+
+  SUITE_END --> SUITE_TEARDOWN["Call TearDownTestSuite()"]
+  SUITE_TEARDOWN --> RUN_ALL
+
+  %% Test Program End
+  RUN_ALL --> PROG_END["OnTestProgramEnd"]
+
+  %% Styles
+  classDef event fill:#f9f,stroke:#333,stroke-width:2px;
+  class SUITE_START,SUITE_END,TEST_START,TEST_END,PROG_END event;
+```
+
+---
+
+## 8. Troubleshooting Common Issues
+
+### Test Not Running
+
+- Ensure your source file is compiled and linked correctly.
+- Verify test names and suite names are free of underscores to avoid name clashes.
+- Check filters (`--gtest_filter`) are not excluding your test.
+
+### `SetUp` or `SetUpTestSuite` Not Called
+
+- Confirm correct casing (`SetUp`, not `Setup`).
+- Make sure the methods are declared **static** for suite-level setup.
+
+### Mixing Test Macros in the Same Suite
+
+GoogleTest does not allow mixing `TEST` and `TEST_F` in the same test suite. If this occurs, rename one to separate suites.
+
+### Fatal Assertions in Constructors or Destructors
+
+Fatal assertions cannot be used in constructors or destructors; use `SetUp`/`TearDown` instead.
+
+### Fixture Sharing Across Suites
+
+Each test suite must have a unique fixture class. Avoid sharing fixture classes across suites to prevent conflicts.
+
+---
+
+## 9. Additional Resources
+
+- [GoogleTest Primer](primer.md) for foundational concepts.
+- [Test Definition & Execution API Reference](reference/testing.md#Test) for detailed API.
+- [Advanced GoogleTest Topics](advanced.md) for sophisticated test lifecycle control.
+- [Organizing Test Suites Guide](guides/core-workflows/organizing-test-suites) for best practices in large codebases.
+- [FAQ: Test Execution Troubleshooting](docs/faq.md#test-execution-failures) for common pitfalls.
