--- a/concepts/core-architecture/mocking-concepts.mdx
+++ b/concepts/core-architecture/mocking-concepts.mdx
@@ -1,197 +1,231 @@
 ---
-title: "Mocking & Mock Object Fundamentals"
-description: "Dive into the principles of mocking in C++ with GoogleMock—learn about mock classes, expectations, and how mock objects enable robust isolation and behavioral verification in tests. This page lays the conceptual groundwork for using the framework’s powerful mock object features."
+title: "Mocking Fundamentals with GoogleMock"
+description: "Understand the conceptual basis for C++ mocking: how GoogleMock models dependencies, expectations, and behaviors using mock classes. Learn the role of matchers, actions, and cardinalities in expressing expected interactions between code and its dependencies."
 ---
 
-# Mocking & Mock Object Fundamentals
+# Mocking Fundamentals with GoogleMock
 
-GoogleMock offers powerful tools to create mock classes in C++ to facilitate unit testing by isolating dependencies, verifying interactions, and controlling method behaviors. This guide introduces the core principles behind mocking with GoogleMock, focusing on mock classes, expectations, and mock objects’ role in ensuring robust, controlled test environments.
+Understanding the conceptual basis of mocking in C++ using GoogleMock (gMock) means grasping how dependencies, expectations, and behaviors are modeled through mock classes. GoogleMock allows you to focus on *interactions* between your code and its dependencies by specifying what you expect to happen during execution, and automatically verifying these at test time.
 
 ---
 
 ## Introduction to Mocking
 
-Mock objects simulate the behavior of real objects in a controlled way, enabling developers to focus on the component under test without relying on complex or unavailable dependencies. GoogleMock is designed specifically for C++ and provides an expressive, declarative syntax to describe mock classes and specify expectations about method calls.
+**Mock objects** mimic the interfaces of real dependencies but allow detailed control over their behavior and the ability to set expectations on how they will be used. Instead of relying on real components—which might be unavailable, slow, or non-deterministic—you use mock objects to isolate and verify your code’s interactions.
 
-Mocking helps you:
+### Why Mock?
 
-- Isolate code under test from its collaborators
-- Verify that the interactions between components conform to expectations
-- Simulate complex or error scenarios easily
-- Make tests faster by avoiding expensive external resources
+Mocks are essential for interaction-based testing where you want to validate:
+- Which methods are called,
+- With what arguments,
+- How many times,
+- In which order,
+- And what results or side effects they produce.
 
-## Mock Classes and Mock Methods
+Unlike *fake objects* (which provide functional implementations but may simplify or shortcut), *mocks* specify expected calls and help detect deviations from those expectations.
 
-At the heart of GoogleMock is the mock class. You define a mock class by inheriting from an interface or base class and declaring mock methods with the `MOCK_METHOD` macro. This macro generates mock implementations for the methods you want to validate or control in tests.
+---
 
-### Declaring a Mock Method
+## Mock Classes: Representing Dependencies
 
-Use `MOCK_METHOD` in the `public` section of your mock class to define a mocked method:
+In GoogleMock, mocking starts by creating a mock class from an interface or an abstract class. The mock class inherits from the original interface and uses the `MOCK_METHOD` macro to generate mock implementations for its virtual methods.
+
+### Defining Mock Methods
 
 ```cpp
-class MockFoo : public Foo {
+class Turtle {
  public:
-   MOCK_METHOD(int, GetSize, (), (const, override));
-   MOCK_METHOD(std::string, Describe, (int type), (override));
+  virtual ~Turtle() {}
+  virtual void PenUp() = 0;
+  virtual void PenDown() = 0;
+  virtual void Forward(int distance) = 0;
+  // ... other methods
+};
+
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+  // ... mocked methods
 };
 ```
 
-Note:
-- If a method is const or has qualifiers, include them as the optional 4th macro argument.
-- Commas within argument types must be enclosed in parentheses or replaced with type aliases.
+- `MOCK_METHOD` automatically generates all boilerplate needed to record and check how methods are called.
+- Methods must be mocked *publicly* in the mock class, even if they are protected or private in the base class.
+- Qualifiers like `const` and calling conventions are supported via optional macro parameters.
 
-### Mock Objects in Use
+### Purpose of Mock Classes
 
-Mock objects are instances of mock classes. When executed in tests, calls to mocked methods check expectations and execute specified behaviors or default actions.
+- Replace real dependencies with controllable objects.
+- Enable setting fine-grained expectations for method calls.
+- Facilitate verifying the interaction contract between components.
+
+---
+
+## Expectations: Specifying Intended Interactions
+
+Expectations define *what* you expect your code to call on the mock object. You set expectations using `EXPECT_CALL(mock_object, method(args))`.
+
+### General Form
 
 ```cpp
-MockFoo mock_foo;
-EXPECT_CALL(mock_foo, GetSize()).WillOnce(Return(5));
-EXPECT_EQ(5, mock_foo.GetSize());
+EXPECT_CALL(mock_object, Method(Matchers...))
+    .Times(Cardinality)
+    .WillOnce(Action)
+    .WillRepeatedly(Action);
 ```
 
-## Setting Expectations with EXPECT_CALL
+- **Matchers** specify argument constraints (exact values, wildcards, predicates).
+- **Cardinalities** describe the expected number of calls (e.g., exactly 1, at least 2).
+- **Actions** determine what the mock does when called (returns values, invokes callbacks, etc).
 
-`EXPECT_CALL` expresses an expectation that a mock method is called with particular arguments, zero or more times, and optionally defines the behavior when called.
+### Matchers: Matching Arguments
+
+- Use explicit values or matcher objects like `_` (wildcard), `Eq(5)`, `Ge(100)`.
+- Specify only the arguments important to your test to avoid brittle tests.
+- When a method is overloaded, specify matchers to disambiguate overloads.
 
 Example:
 
 ```cpp
-EXPECT_CALL(mock_obj, Method(arg_matchers...))
-    .Times(cardinality)
-    .InSequence(sequence)
-    .After(other_expectations)
-    .WillOnce(action)
-    .WillRepeatedly(action);
+using ::testing::_;
+EXPECT_CALL(turtle, GoTo(50, _));  // x = 50, y = anything
 ```
 
-### Core Clauses Explained
+### Cardinalities: Controlling How Often
 
-- **With**: Restricts calls to those whose combined arguments match a multi-argument matcher.
-- **Times**: Specifies how many times the call is expected. Supports `AnyNumber()`, `AtLeast(n)`, `AtMost(n)`, `Between(m, n)`, or `Exactly(n)`.
-- **InSequence**: Requires the call to happen in a specified order within sequences.
-- **After**: Specifies that this call must happen after specified expectations are satisfied.
-- **WillOnce**: Defines the behavior (action) the mock method performs on the next call.
-- **WillRepeatedly**: Defines the behavior for all subsequent calls after `WillOnce` actions run out.
-- **RetiresOnSaturation**: Retires the expectation once saturated, making it inactive for further calls.
+- Use `Times()` with predefined cardinalities:
+  - `Exactly(n)` or `n` — expect exactly `n` calls
+  - `AtLeast(n)` — expect at least `n` calls
+  - `AnyNumber()` — any number of calls allowed
+  - `Between(m, n)` — between `m` and `n` calls
+- If `Times` is omitted, gMock infers it based on how many `.WillOnce()` and `.WillRepeatedly()` you specify.
 
-### Managing Call Order and Cardinality
+### Actions: Defining Behavior
 
-By default, expectations can be fulfilled in any order. You can enforce strict or partial ordering with `InSequence` and `After`. Cardinality controls how many times calls should occur.
+- Default action returns default values (0, false, default-constructed objects).
+- Override behavior with `.WillOnce()` and `.WillRepeatedly()`.
+- Chaining allows specifying different actions for calls in sequence.
+
+Example:
 
 ```cpp
-Sequence s;
-EXPECT_CALL(mock, Foo(1)).InSequence(s);
-EXPECT_CALL(mock, Foo(2)).InSequence(s);
+using ::testing::Return;
+EXPECT_CALL(turtle, GetX())
+    .WillOnce(Return(100))
+    .WillOnce(Return(200))
+    .WillRepeatedly(Return(300));
 ```
 
-## Defining Default Behavior with ON_CALL
+### Multiple Expectations and Ordering
 
-`ON_CALL` specifies default behaviors for mock methods without asserting that the method must be called. It provides the fallback actions used when no matching `EXPECT_CALL` is found.
+- Later expectations override earlier ones when matching calls.
+- To enforce call order, use sequences or `InSequence` blocks.
+- Expectations are *sticky* by default; they remain active even after saturation unless explicitly retired.
 
-```cpp
-ON_CALL(mock_obj, Method(arg_matchers...))
-    .With(matcher)      // optional
-    .WillByDefault(action);  // mandatory
-```
-
-This enables graceful default handling of method calls you do not explicitly expect.
-
-## Mock Object Strictness
-
-GoogleMock offers strictness wrappers that control how uninteresting calls (calls without expectations) are treated:
-
-| Mock Wrapper         | Behavior on Uninteresting Calls                     |
-|---------------------|----------------------------------------------------|
-| `NiceMock<T>`       | Suppresses warnings. Calls proceed silently.       |
-| `NaggyMock<T>`      | (Default) Prints warnings on uninteresting calls.  |
-| `StrictMock<T>`     | Treats uninteresting calls as test failures.       |
-
-Example usage:
+Example partial ordering:
 
 ```cpp
-NiceMock<MockFoo> nice_mock;
-StrictMock<MockFoo> strict_mock;
-```
-
-*Tip:* Use `NiceMock` to reduce noisy warnings, and `StrictMock` to enforce stricter test contracts.
-
-## Real-World Example: Mocking a Simple Interface
-
-```cpp
-class Printer {
- public:
-   virtual ~Printer() {};
-   virtual void Print(int value) = 0;
-};
-
-class MockPrinter : public Printer {
- public:
-   MOCK_METHOD(void, Print, (int value), (override));
-};
-
-TEST(PrinterTest, PrintCalledCorrectly) {
-  MockPrinter mock;
-  EXPECT_CALL(mock, Print(42))
-    .Times(1);
-
-  mock.Print(42);
+using ::testing::InSequence;
+{
+  InSequence s;
+  EXPECT_CALL(turtle, PenDown());
+  EXPECT_CALL(turtle, Forward(100));
+  EXPECT_CALL(turtle, PenUp());
 }
 ```
 
-Here `EXPECT_CALL` ensures `Print` is called once with value `42`.
-
-## Troubleshooting Common Scenarios
-
-- **Uninteresting call warnings:** Usually harmless. Use `NiceMock` or add a broad `EXPECT_CALL` with `Times(AnyNumber())`.
-- **Unexpected call errors:** Means the call didn’t match any expectation. Review your matchers or add missing `EXPECT_CALL`s.
-- **Too many calls:** Check if `Times()` or actions like `WillOnce` are correctly specified and exhausted.
-- **Call order failures:** Use `InSequence` or `After` to specify call ordering as needed.
-
-## Best Practices
-
-- Prefer `ON_CALL` for default behavior and use `EXPECT_CALL` only when you want to verify that calls happen.
-- Use cardinalities to express how many times a call is expected, reducing test brittleness.
-- When matching arguments, match only what matters to avoid brittle tests.
-- Sequence expectations only when call order is important.
-- Use `NiceMock` for less verbose tests; switch to `StrictMock` for critical interfaces requiring rigorous validation.
+Calls to mocked methods must match the expected order.
 
 ---
 
-## Conceptual Flow of Mock Method Calls
+## Mock Object Behavior Variants
 
-```mermaid
-flowchart TD
-  CallMethod([Mock Method Called]) --> FindExpectation{Is EXPECT_CALL matched?}
-  FindExpectation -- Yes --> CheckCardinality{Is call count within limit?}
-  FindExpectation -- No --> UseDefaultAction{Is ON_CALL specified?}
-  UseDefaultAction -- Yes --> PerformOnCallAction
-  UseDefaultAction -- No --> PerformBuiltInDefaultAction
-  CheckCardinality -- Yes --> PerformExpectedAction
-  CheckCardinality -- No --> ReportError("Exceeded expected calls")
-  PerformExpectedAction --> ReturnResult
-  PerformOnCallAction --> ReturnResult
-  PerformBuiltInDefaultAction --> ReturnResult
-  ReportError --> ReturnResult
+GoogleMock provides variants of mocks controlling behavior on *uninteresting calls* (calls with no matching expectation):
+
+- **NiceMock**: suppresses warnings for uninteresting calls.
+- **NaggyMock**: (default) warns about uninteresting calls.
+- **StrictMock**: treats uninteresting calls as errors.
+
+All are subclasses of the mock class and can be constructed with the same arguments.
+
+Example:
+
+```cpp
+using ::testing::NiceMock;
+NiceMock<MockFoo> nice_foo;
+EXPECT_CALL(nice_foo, DoSomething());
 ```
 
-This flow illustrates how GoogleMock evaluates expectations and default actions, handling errors and successes accordingly.
-
+Choose according to how strict you want your test verification to be.
 
 ---
 
-## Additional Resources
+## User Workflow: Using Mocks in Tests
 
-- [gMock Cheat Sheet](../docs/gmock_cheat_sheet.md) — Quick reference for typical mocking tasks.
-- [Mocking Reference](../docs/reference/mocking.md) — Detailed API syntax and usage.
-- [gMock Cookbook](../docs/gmock_cook_book.md) — Recipes for common mocking patterns.
-- [Mock Strictness Controls](../api-reference/mocking-and-matchers/mock-strictness-controls.md) — Usage of `NiceMock`, `NaggyMock`, `StrictMock`.
-- [gMock for Dummies](../docs/gmock_for_dummies.md) — Beginner-friendly introduction.
+1. Include gMock and import necessary `testing` namespace elements.
+2. Create mock objects (`MockTurtle turtle;`).
+3. Set expectations (`EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));`).
+4. Exercise code that uses the mocks.
+5. GoogleMock verifies expectations automatically on destruction, reporting errors immediately on violation.
+
+Example test:
+
+```cpp
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
+
+using ::testing::AtLeast;
+
+TEST(PainterTest, DrawsWithPenDown) {
+  MockTurtle turtle;
+  EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
+
+  Painter painter(&turtle);
+  EXPECT_TRUE(painter.DrawCircle(0, 0, 10));
+}
+```
+
+If `PenDown()` is not called as expected, the test fails with a detailed error.
+
+---
+
+## Practical Tips & Best Practices
+
+- Specify expectations **before** exercising the mock — calling `EXPECT_CALL` after mock invocations leads to undefined behavior.
+- Avoid over-specifying arguments for matchers — be as specific as necessary but no more.
+- When mocking methods with non-copyable or move-only arguments (e.g., `std::unique_ptr`), use the familiar `MOCK_METHOD` macro directly; actions can use lambdas returning new instances.
+- Use sequences to enforce call orders without making tests brittle.
+- For methods that take many arguments, consider writing forwarding mock methods with simplified signatures for ease of mocking.
+- Use `RetiresOnSaturation()` to make expectations inactive after they have been fully met, useful for layered expectations.
+- To reduce warnings for uninteresting calls, wrap mocks in `NiceMock` or use catch-all expectations with `Times(AnyNumber())`.
+- Always have virtual destructors in interfaces intended for mocking.
 
 ---
 
 ## Summary
 
-This page lays the conceptual foundation for mocking in GoogleMock, explaining how mock objects and methods are declared, how expectations and default behaviors are defined with `EXPECT_CALL` and `ON_CALL`, and how mock strictness modes manage uninteresting call behaviors. These core concepts empower developers to write precise, maintainable tests by controlling and validating interactions with mock dependencies effectively.
+GoogleMock lets you model dependencies by creating mock classes with mocked virtual methods. Through `EXPECT_CALL`, you define precise expectations about the arguments, call count, order, and behaviors of those methods in your tests. Matchers allow flexible argument specification, while cardinalities define call frequency. Actions tell mocks what to do when invoked.
+
+Choosing mock variants like `NiceMock` and `StrictMock` helps you control how strictly uninteresting calls are handled. Setting clear expectations before exercising your test code ensures early detection and clear failure messages. This interaction-driven testing approach improves test isolation, readability, and reliability.
 
 ---
+
+## Additional Resources
+
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly guide with example-driven explanations.
+- [Mocking Reference](../reference/mocking.md) — Comprehensive reference for macros, classes, and detailed use.
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Recipes for common mocking tasks.
+- [Actions & Cardinalities API Reference](../api-reference/mocking-api/actions-and-cardinalities.md) — In-depth on setting mock behaviors.
+- [Matchers Reference](../api-reference/mocking-api/matchers-reference.md) — Full list of argument matchers.
+
+---
+
+## Related Concepts Within Documentation
+
+- *Mock Class Creation & MOCK_METHOD* (API Reference) — How to define mocks.
+- *Mock Behavior Customization* (API Reference) — Control uninteresting calls with NiceMock/NaggyMock/StrictMock.
+- *Mocking Techniques and Patterns* (Guides) — Advanced use cases and design patterns.
+
+Use these guides together to master the art of mock-based testing with GoogleMock.
